--- a/webMetics/Views/Usuario/InformacionPersonal.cshtml
+++ b/webMetics/Views/Usuario/InformacionPersonal.cshtml
@@ -190,11 +190,11 @@
                                 <thead>
                                     <tr>
                                         <th scope="col" style="width: 25%">Módulos Inscritos</th>
-                                        <th class="text-center" scope="col" style="width: 7.5%">Horas<br>Matriculadas</th>
+                                        <th class="text-center" scope="col" style="width: 7.5%">Horas<br>Inscritas</th>
                                         <th class="text-center" scope="col" style="width: 7.5%">Horas<br>Aprobadas</th>
                                         <th class="text-center" scope="col" style="width: 7.5%">Calificación</th>
                                         <th class="text-center" scope="col" style="width: 3.33%"></th>
-                                        <th class="text-center" scope="col" style="width: 7.5%">Total Horas<br>Matriculadas</th>
+                                        <th class="text-center" scope="col" style="width: 7.5%">Total Horas<br>Inscritas</th>
                                         <th class="text-center" scope="col" style="width: 7.5%">Total Horas<br>Aprobadas</th>
                                     </tr>
                                 </thead>
@@ -245,7 +245,7 @@
                                 <thead>
                                     <tr>
                                         <th scope="col" style="width: 25%">Módulos Incompletos</th>
-                                        <th class="text-center" scope="col" style="width: 7.5%">Horas<br>Matriculadas</th>
+                                        <th class="text-center" scope="col" style="width: 7.5%">Horas<br>Inscritas</th>
                                         <th class="text-center" scope="col" style="width: 7.5%">Horas<br>Aprobadas</th>
                                         <th class="text-center" scope="col" style="width: 7.5%">Calificación</th>
                                     </tr>
@@ -290,7 +290,7 @@
                                 <thead>
                                     <tr>
                                         <th scope="col" style="width: 25%">Módulos Aprobados</th>
-                                        <th class="text-center" scope="col" style="width: 7.5%">Horas<br>Matriculadas</th>
+                                        <th class="text-center" scope="col" style="width: 7.5%">Horas<br>Inscritas</th>
                                         <th class="text-center" scope="col" style="width: 7.5%">Horas<br>Aprobadas</th>
                                         <th class="text-center" scope="col" style="width: 7.5%">Calificación</th>
                                     </tr>
