--- a/webMetics/Views/Participante/VerDatosParticipante.cshtml
+++ b/webMetics/Views/Participante/VerDatosParticipante.cshtml
@@ -130,7 +130,7 @@
                                                         <td class="text-center">@((inscripcion.horasMatriculadas ?? 0))</td>
                                                         <td class="text-center">@((inscripcion.horasAprobadas ?? 0))</td>
                                                         <td class="text-center">
-                                                            @using (Html.BeginForm("SubirHorasAprobadas", "Participante", new { idGrupo = inscripcion.idGrupo, idParticipante = ViewBag.Participante.idParticipante }, FormMethod.Post))
+                                                            @using (Html.BeginForm("SubirHorasAprobadas", "Participante", new { idGrupo = inscripcion.idGrupo, nombreGrupo = inscripcion.nombreGrupo, numeroGrupo = inscripcion.numeroGrupo, idParticipante = ViewBag.Participante.idParticipante }, FormMethod.Post))
                                                             {
                                                                 <div class="my-2 align-items-center justify-content-start d-lg-flex">
                                                                     <input type="number" min="0" class="form-control" style="max-width: 125px;" name="horasAprobadas">
