--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -128,6 +128,19 @@
                                             }
                                         </div>
                                         <div class="card-text mb-3">@grupo.nombreCategoria</div>
+                                        @if (!string.IsNullOrEmpty(grupo.enlace))
+                                        {
+                                            <div class="card-text mb-3">
+                                                <strong><a href="@grupo.enlace" target="_blank">Enlace del curso</a></strong>
+                                            </div>
+                                        }
+
+                                        @if (!string.IsNullOrEmpty(grupo.clave_inscripcion))
+                                        {
+                                            <div class="card-text mb-3">
+                                                Clave de inscripción: @grupo.clave_inscripcion
+                                            </div>
+                                        }
                                         <div class="mt-3">
                                             @if (grupo.fechaInicioInscripcion < ViewBag.DateNow && ViewBag.DateNow < grupo.fechaFinalizacionInscripcion)
                                             {
@@ -276,6 +289,19 @@
                                                     }
                                                 </div>
                                                 <div class="card-text mb-3"><strong>@grupo.nombreCategoria</strong></div>
+                                                @if (!string.IsNullOrEmpty(grupo.enlace))
+                                                {
+                                                    <div class="card-text mb-3">
+                                                        <strong><a href="@grupo.enlace" target="_blank">Enlace del curso</a></strong>
+                                                    </div>
+                                                }
+
+                                                @if (!string.IsNullOrEmpty(grupo.clave_inscripcion))
+                                                {
+                                                    <div class="card-text mb-3">
+                                                        Clave de inscripción: @grupo.clave_inscripcion
+                                                    </div>
+                                                }
                                             </div>
                                         </div>
                                         <div class="mt-3 align-items-center text-center">
@@ -451,6 +477,19 @@
                                         }
                                     </div>
                                 <div class="card-text mb-3">@grupo.nombreCategoria</div>
+                                @if (!string.IsNullOrEmpty(grupo.enlace))
+                                {
+                                    <div class="card-text mb-3">
+                                        <strong><a href="@grupo.enlace" target="_blank">Enlace del curso</a></strong>
+                                    </div>
+                                }
+
+                                @if (!string.IsNullOrEmpty(grupo.clave_inscripcion))
+                                {
+                                    <div class="card-text mb-3">
+                                        Clave de inscripción: @grupo.clave_inscripcion
+                                    </div>
+                                }
                                     <div class="mt-3">
                                         @if (ViewBag.Role == 1 || ViewBag.Role == 2)
                                         {
@@ -657,6 +696,20 @@
                                                 }
                                             </div>
                                                 <div class="card-text mb-3"><strong>@grupo.nombreCategoria</strong></div>
+                                                @if (!string.IsNullOrEmpty(grupo.enlace))
+                                                {
+                                                    <div class="card-text mb-3">
+                                                        <strong><a href="@grupo.enlace" target="_blank">Enlace del curso</a></strong>
+                                                    </div>
+                                                }
+
+                                                @if (!string.IsNullOrEmpty(grupo.clave_inscripcion))
+                                                {
+                                                    <div class="card-text mb-3">
+                                                        <strong>Clave de inscripción:</strong> @grupo.clave_inscripcion
+                                                    </div>
+                                                }
+
                                             </div>
                                     </div>
                                         <div class="mt-3 align-items-center text-center">
