--- a/webMetics/Views/Grupo/CrearGrupo.cshtml
+++ b/webMetics/Views/Grupo/CrearGrupo.cshtml
@@ -101,7 +101,16 @@
                             @Html.TextBoxFor(grupoModel => grupoModel.lugar, new { @class = "form-control", @maxlength = "256", @autocomplete = "off", @id = "lugarText" })
                             @Html.ValidationMessageFor(grupoModel => grupoModel.lugar, "", new { @class = "text-danger" })
                         </div>
-
+                        <div class="form-group mt-1">
+                            @Html.LabelFor(grupoModel => grupoModel.enlace, new { Style = "font-size:22px" })
+                            @Html.TextBoxFor(grupoModel => grupoModel.enlace, new { @class = "form-control", @maxlength = "256", @autocomplete = "off", @id = "lugarText" })
+                            @Html.ValidationMessageFor(grupoModel => grupoModel.enlace, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group mt-1">
+                            @Html.LabelFor(grupoModel => grupoModel.clave_inscripcion, new { Style = "font-size:22px" })
+                            @Html.TextBoxFor(grupoModel => grupoModel.clave_inscripcion, new { @class = "form-control", @maxlength = "256", @autocomplete = "off", @id = "lugarText" })
+                            @Html.ValidationMessageFor(grupoModel => grupoModel.clave_inscripcion, "", new { @class = "text-danger" })
+                        </div>
                         <div class="form-group mt-1">
                             @Html.LabelFor(grupoModel => grupoModel.horario, new { Style = "font-size:22px" })
                             @Html.TextBoxFor(grupoModel => grupoModel.horario, new { @placeholder = "Ejemplo: L - V de 7am a 9am", @class = "form-control", @maxlength = "200", @autocomplete = "off", @id = "horarioText" })
