--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -135,10 +135,10 @@
                                             </div>
                                         }
 
-                                        @if (!string.IsNullOrEmpty(grupo.clave_inscripcion))
+                                        @if (!string.IsNullOrEmpty(grupo.claveInscripcion))
                                         {
                                             <div class="card-text mb-3">
-                                                Clave de inscripción: @grupo.clave_inscripcion
+                                                    Clave de inscripción: @grupo.claveInscripcion
                                             </div>
                                         }
                                         <div class="mt-3">
@@ -296,10 +296,10 @@
                                                     </div>
                                                 }
 
-                                                @if (!string.IsNullOrEmpty(grupo.clave_inscripcion))
+                                                @if (!string.IsNullOrEmpty(grupo.claveInscripcion))
                                                 {
                                                     <div class="card-text mb-3">
-                                                        <strong>Clave de inscripción:</strong> @grupo.clave_inscripcion
+                                                        <strong>Clave de inscripción:</strong> @grupo.claveInscripcion
                                                     </div>
                                                 }
                                             </div>
@@ -484,10 +484,10 @@
                                     </div>
                                 }
 
-                                @if (!string.IsNullOrEmpty(grupo.clave_inscripcion))
+                                @if (!string.IsNullOrEmpty(grupo.claveInscripcion))
                                 {
                                     <div class="card-text mb-3">
-                                        Clave de inscripción: @grupo.clave_inscripcion
+                                        Clave de inscripción: @grupo.claveInscripcion
                                     </div>
                                 }
                                     <div class="mt-3">
@@ -703,10 +703,10 @@
                                                     </div>
                                                 }
 
-                                                @if (!string.IsNullOrEmpty(grupo.clave_inscripcion))
+                                                @if (!string.IsNullOrEmpty(grupo.claveInscripcion))
                                                 {
                                                     <div class="card-text mb-3">
-                                                        <strong>Clave de inscripción:</strong> @grupo.clave_inscripcion
+                                                        <strong>Clave de inscripción:</strong> @grupo.claveInscripcion
                                                     </div>
                                                 }
 
