Se agrega espacio entre tabla y footer

--- a/webMetics/Views/Participante/VerParticipantes.cshtml
+++ b/webMetics/Views/Participante/VerParticipantes.cshtml
@@ -8,7 +8,7 @@
 
 @if (ViewBag.Id != "" && ViewBag.Role == 1)
 {
-    <div class="contenedor-tipos-actividades container-fluid">
+    <div class="contenedor-tipos-actividades container-fluid" >
         @if (urlReferrer != null)
         {
             <div class="d-flex justify-content-start mb-3">
@@ -36,7 +36,7 @@
             </div>
         }
 
-        <div class="table-responsive">
+        <div class="table-responsive" style="padding-bottom: 220px;">
 
             <div class="d-flex justify-content-between">
                 <div class="mb-3" style="width: 70%;">
