Corrección de botón regresar/cancelar en las páginas de Niveles,Crear competencia,Crear Módulo y Configuración del correo

--- a/webMetics/Views/EmailSettings/Index.cshtml
+++ b/webMetics/Views/EmailSettings/Index.cshtml
@@ -11,7 +11,7 @@
         @if (urlReferrer != null)
         {
             <div class="d-flex justify-content-start mb-3">
-                <a class="text-dark fs-4" onclick="history.go(-1); return false;" href="#">
+                <a class="text-dark fs-4" href="@Url.Action("ListaGruposDisponibles", "Grupo")">
                     <i class="bi bi-arrow-left"></i>
                 </a>
             </div>
@@ -77,7 +77,9 @@
             </div>
             <div class="row justify-content-center m-4">
                 <div class="col-auto">
-                    <a href="#" class="btn btn-secondary btn-block" onclick="history.go(-1); return false;">Cancelar</a>
+                    <a href="@Url.Action("ListaGruposDisponibles", "Grupo")" class="btn btn-secondary btn-block">
+                        Cancelar
+                    </a>
                 </div>
                 <div class="col-auto">
                     <input type="submit" class="btn btn-primary btn-block" value="Guardar" />
