--- a/webMetics/Views/Tema/CrearTema.cshtml
+++ b/webMetics/Views/Tema/CrearTema.cshtml
@@ -50,7 +50,9 @@
                     </div>
                     <div class="row justify-content-center m-4">
                         <div class="col-auto">
-                            <a href="#" class="btn btn-secondary btn-block" onclick="history.go(-1); return false;">Cancelar</a>
+                            <a href="@Url.Action("ListaGruposDisponibles", "Grupo")" class="btn btn-secondary btn-block">
+                                Cancelar
+                            </a>
                         </div>
                         <div class="col-auto">
                             <input type="submit" class="btn btn-primary btn-block" value="Guardar" />
