--- a/webMetics/Views/Usuario/InformacionPersonal.cshtml
+++ b/webMetics/Views/Usuario/InformacionPersonal.cshtml
@@ -122,7 +122,7 @@
                         </tbody>
                     </table>
                 </div>
-
+                
                 @if (ViewBag.Inscripciones == null)
                 {
                     @if (ViewBag.ListaGrupos == null)
@@ -132,6 +132,7 @@
                     }
                     else
                     {
+                        <!-- Módulos asesor -->
                         <br />
                         <div class="mt-4">
                             <h3 class="">Módulos creados</h3>
@@ -185,8 +186,30 @@
                 {
                     @if (ViewBag.Role == 0)
                     {
+                        <!-- Medallas -->
                         <br />
-                        <hr />
+                        <div class="d-flex justify-content-start mt-4">
+                            @foreach (var inscripcion in ViewBag.Inscripciones)
+                            {
+                                <div class="card me-2" style="height: 305px;">
+                                    @if (inscripcion.estado == "Aprobado")
+                                    {
+                                        var medalName = $"Medalla_ {inscripcion.nombreGrupo}.png";
+                                        var medalPath = Directory.EnumerateFiles("wwwroot/images/medallas", $"*.Medalla_ {inscripcion.nombreGrupo}.png").FirstOrDefault();
+
+                                        if (medalPath != null)
+                                        {
+                                            var normalizedMedalPath = medalPath.Replace('\\', '/');
+                                            var relativeMedalPath = normalizedMedalPath.Replace("wwwroot/", "/", StringComparison.OrdinalIgnoreCase);
+                                            <img class="card-img" src="@relativeMedalPath" alt="Medalla de @inscripcion.nombreGrupo" style="height: 300px;" />
+                                        }
+                                    }
+                                </div>
+                            }
+                        </div>
+
+                        <!-- Módulos Participante -->
+                        <br />
                         <div class="mt-4">
                             <h3 class="">Módulos Aprobados</h3>
                             <table class="table table-striped">
